# Roboss

./: .env.example  .gitignore  README.md  V2R_MASTER_PROMPT.md  e2e.sh  env_loader.py  eveil_du_robot.ipynb  gemini_service.py  generate_video.py  index.html  industrial_prompt.txt  package-lock.json  package.json  requirements.txt  run.sh  run_pipeline.py  scenario.example.json  tailwind.config.js  vite.config.js
v2r/: .gitignore  BENCHMARK.md  LICENSE_AUDIT.md  README.md  conventions.md  pyproject.toml  qa_bench_report.json  qa_vlm_baseline.json
v2r/assets/body_models/: README.md
v2r/assets/robots/: README.md
v2r/config/: datasets.yaml  licensing.yaml  multiview.yaml  pipeline.yaml  qa.yaml  robots.yaml  verbs.yaml
v2r/envs/: README.md
v2r/envs/feasibility_judge/: README.md  tool_entry.py
v2r/envs/foundationpose/: Dockerfile  NOTES.md  README.md  tool_entry.py
v2r/envs/gmr/: NOTES.md  README.md  pixi.toml  tool_entry.py
v2r/envs/gvhmr/: NOTES.md  README.md  pixi.toml  tool_entry.py
v2r/envs/mink/: pixi.toml
v2r/envs/semantics/: NOTES.md  README.md  pixi.toml  tool_entry.py
v2r/envs/vipe/: NOTES.md  README.md  pixi.toml  tool_entry.py
v2r/envs/wilor/: NOTES.md  README.md  pixi.toml  tool_entry.py
v2r/scripts/: calibrate_forensics.py  eval_agency_summary.py  fetch_superanimal.py  print_bench.py  probe_crusoe.py  render_label_demo.py  vlm_only_baseline.py
v2r/tests/: test_agentic_tools.py  test_alignment.py  test_feasibility.py  test_multiview_session.py  test_pipeline.py  test_rotations.py  test_schema.py  test_syngen.py  test_twin.py
(+263 files in other folders)
