[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "v2r"
version = "0.1.0"
description = "V2R Factory: video -> robot-ready (LeRobot v3) data pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14",
    "opencv-python-headless>=4.8",
    "scipy>=1.11",
    "trimesh>=4.0",
    "typer>=0.9",
    "rich>=13",
    "h5py>=3.9",
    "pyyaml>=6",
]

[project.optional-dependencies]
# Video import + timeseries extraction (works on Windows/macOS/Linux).
timeseries = [
    "mediapipe>=0.10.14",
    "ultralytics>=8.3",
    "datasets>=2.18",
    "torch>=2.0",
    "lap>=0.5.12",
]
# Heavy / host-specific deps: install on the CUDA Linux host only.
full = ["open3d", "mujoco", "lerobot", "rerun-sdk", "ffmpeg-python", "scenedetect"]
dev = ["pytest>=8"]

[project.scripts]
v2r = "v2r.orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
